# dubna

./: .gitignore  CMakeLists.txt  README.md  analyse.ipynb  chi-2.py  chi.ipynb  cleaning.py  cleaning_longer.py  cleaning_new.py  cleaning_old.py  cleaning_old_longer.py  cleaning_old_merge.py  coating_cleaning.py  drawing_tracks.py  fast_cleaning.py  get_data.py  graph_cleaning.py  histogram.py  main.prof  main.py  merging.py  merging_logical.py  remove_outliers.py  requirements.txt  save_data.py  test1.py  test2.py  test3.py  validation.py  visualizing.py
analyse/: validation.py  visualizing.py
analyse/draw_plots/: chi-2.py  histogram.py
analyse/notebook/: compare_post_processing_methonds.ipynb
clustering/: work_with_raw_data.py
cpp/: CMakeLists.txt
cpp/bld/: CMakeCache.txt  Makefile  TrackRecognition  cmake_install.cmake
cpp/src/: main.cpp
data/: event0_hits.txt  event672_1_hits.txt  event672_hits.txt  event672_mpdroot.txt  event672_zinchenko.txt  hits.txt
data/selecting_pri_and_sec/: event_0_hits.txt  event_10_hits.txt  event_10_prototracks.txt  event_11_hits.txt  event_12_hits.txt  (+138 more)
data_processing/: cluster_data.py  parse_data.py
hdr/: get_data.h
ml_notebook/: XGBoost.ipynb  clustering.ipynb  existing_algs.py  neural_net.ipynb  neural_net.py
result/: cleaning.py  fast_cleaning.py  get_data.py  main.py  merging.py  new_event.txt  remove_emissions.py  remove_outliers.py  save_data.py  smoothing.py  visualizing.py
src/: main.cpp
tracks_visualising/: README.md  drawing_tracks.py
tracks_visualizing/: drawing_tracks.py  event.txt  new_event.txt
(+158 files in other folders)
